--- a/src/Waterfront.Acl.Static/Waterfront.Acl.Static.csproj
+++ b/src/Waterfront.Acl.Static/Waterfront.Acl.Static.csproj
@@ -8,8 +8,6 @@
 
     <ItemGroup>
         <ProjectReference Include="..\Waterfront.Acl.Static.Models\Waterfront.Acl.Static.Models.csproj" />
-        <ProjectReference Include="..\Waterfront.Common\Waterfront.Common.csproj" />
-        <ProjectReference Include="..\Waterfront.Core\Waterfront.Core.csproj" />
     </ItemGroup>
 
     <ItemGroup>
@@ -17,6 +15,8 @@
         <PackageReference Include="Microsoft.Extensions.Options" Version="6.0.0" />
         <PackageReference Include="BCrypt.Net-Next" Version="4.0.3" />
         <PackageReference Include="DotNet.Glob" Version="3.1.3" />
+        <PackageReference Include="Waterfront.Common" Version="1.0.0-alpha.2" />
+        <PackageReference Include="Waterfront.Core" Version="1.0.0-alpha.2" />
     </ItemGroup>
 
 </Project>
