--- a/src/Waterfront.Acl.Static.Models/Waterfront.Acl.Static.Models.csproj
+++ b/src/Waterfront.Acl.Static.Models/Waterfront.Acl.Static.Models.csproj
@@ -4,11 +4,11 @@
         <TargetFramework>net6.0</TargetFramework>
         <ImplicitUsings>disable</ImplicitUsings>
         <Nullable>enable</Nullable>
-        <Version>1.0.0</Version>
         <IsPackable>false</IsPackable>
+        <NoWarn>CS8618</NoWarn>
     </PropertyGroup>
 
     <ItemGroup>
-        <PackageReference Include="Waterfront.Common" Version="1.0.0-alpha.2" />
+        <PackageReference Include="Waterfront.Common" Version="1.0.0-alpha.4" />
     </ItemGroup>
 </Project>
