--- a/src/Waterfront.Acl.Static/Waterfront.Acl.Static.csproj
+++ b/src/Waterfront.Acl.Static/Waterfront.Acl.Static.csproj
@@ -4,7 +4,8 @@
         <TargetFramework>net6.0</TargetFramework>
         <ImplicitUsings>disable</ImplicitUsings>
         <Nullable>enable</Nullable>
-        <Version>1.0.0</Version>
+        <Version>1.0.0-alpha.1</Version>
+        <IsPackable>true</IsPackable>
     </PropertyGroup>
 
     <ItemGroup>
@@ -16,8 +17,8 @@
         <PackageReference Include="Microsoft.Extensions.Options" Version="6.0.0" />
         <PackageReference Include="BCrypt.Net-Next" Version="4.0.3" />
         <PackageReference Include="DotNet.Glob" Version="3.1.3" />
-        <PackageReference Include="Waterfront.Common" Version="1.0.0-alpha.2" />
-        <PackageReference Include="Waterfront.Core" Version="1.0.0-alpha.2" />
+        <PackageReference Include="Waterfront.Common" Version="1.0.0-alpha.4" />
+        <PackageReference Include="Waterfront.Core" Version="1.0.0-alpha.4" />
     </ItemGroup>
 
 </Project>
