--- a/src/Waterfront.Acl.Static/Waterfront.Acl.Static.csproj
+++ b/src/Waterfront.Acl.Static/Waterfront.Acl.Static.csproj
@@ -2,10 +2,8 @@
 
   <PropertyGroup>
     <TargetFramework>net6.0</TargetFramework>
-    <ImplicitUsings>disable</ImplicitUsings>
+    <ImplicitUsings>enable</ImplicitUsings>
     <Nullable>enable</Nullable>
-    <Version>1.0.0-alpha.7</Version>
-    <IsPackable>true</IsPackable>
   </PropertyGroup>
 
   <ItemGroup>
@@ -13,8 +11,15 @@
     <PackageReference Include="Microsoft.Extensions.Options" Version="6.0.0" />
     <PackageReference Include="BCrypt.Net-Next" Version="4.0.3" />
     <PackageReference Include="DotNet.Glob" Version="3.1.3" />
-    <PackageReference Include="Waterfront.Common" Version="1.0.0-alpha.6" />
-    <PackageReference Include="Waterfront.Core" Version="1.0.0-alpha.9" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <Reference Include="Waterfront.Common">
+      <HintPath>..\..\..\Waterfront\src\Waterfront.Common\bin\Debug\net6.0\Waterfront.Common.dll</HintPath>
+    </Reference>
+    <Reference Include="Waterfront.Core">
+      <HintPath>..\..\..\Waterfront\src\Waterfront.Core\bin\Debug\net6.0\Waterfront.Core.dll</HintPath>
+    </Reference>
   </ItemGroup>
 
 
