--- a/src/Waterfront.Acl.Static.Extensions.DependencyInjection/Waterfront.Acl.Static.Extensions.DependencyInjection.csproj
+++ b/src/Waterfront.Acl.Static.Extensions.DependencyInjection/Waterfront.Acl.Static.Extensions.DependencyInjection.csproj
@@ -7,24 +7,13 @@
     </PropertyGroup>
 
     <ItemGroup>
-        <Reference Include="Waterfront.Extensions.DependencyInjection">
-            <HintPath>..\..\..\Waterfront.Extensions.DependencyInjection\src\Waterfront.Extensions.DependencyInjection\bin\Debug\net6.0\Waterfront.Extensions.DependencyInjection.dll</HintPath>
-        </Reference>
-        <Reference Include="Waterfront.Common">
-            <HintPath>..\..\..\Waterfront\src\Waterfront.Common\bin\Debug\net6.0\Waterfront.Common.dll</HintPath>
-        </Reference>
-        <Reference Include="Waterfront.Core">
-            <HintPath>..\..\..\Waterfront\src\Waterfront.Core\bin\Debug\net6.0\Waterfront.Core.dll</HintPath>
-        </Reference>
-    </ItemGroup>
-
-    <ItemGroup>
         <ProjectReference Include="..\Waterfront.Acl.Static\Waterfront.Acl.Static.csproj"/>
     </ItemGroup>
 
     <ItemGroup>
         <PackageReference Include="Microsoft.Extensions.DependencyInjection" Version="6.0.1"/>
         <PackageReference Include="Microsoft.Extensions.Configuration" Version="6.0.1"/>
+        <PackageReference Include="Waterfront.Extensions.DependencyInjection" Version="1.0.0-alpha.13"/>
     </ItemGroup>
 
 </Project>
