--- a/src/Waterfront.Acl.Static/Waterfront.Acl.Static.csproj
+++ b/src/Waterfront.Acl.Static/Waterfront.Acl.Static.csproj
@@ -1,26 +1,18 @@
 <Project Sdk="Microsoft.NET.Sdk">
 
-  <PropertyGroup>
-    <TargetFramework>net6.0</TargetFramework>
-    <ImplicitUsings>enable</ImplicitUsings>
-    <Nullable>enable</Nullable>
-  </PropertyGroup>
+    <PropertyGroup>
+        <TargetFramework>net6.0</TargetFramework>
+        <ImplicitUsings>enable</ImplicitUsings>
+        <Nullable>enable</Nullable>
+    </PropertyGroup>
 
-  <ItemGroup>
-    <PackageReference Include="Microsoft.Extensions.Logging" Version="6.0.0" />
-    <PackageReference Include="Microsoft.Extensions.Options" Version="6.0.0" />
-    <PackageReference Include="BCrypt.Net-Next" Version="4.0.3" />
-    <PackageReference Include="DotNet.Glob" Version="3.1.3" />
-  </ItemGroup>
-
-  <ItemGroup>
-    <Reference Include="Waterfront.Common">
-      <HintPath>..\..\..\Waterfront\src\Waterfront.Common\bin\Debug\net6.0\Waterfront.Common.dll</HintPath>
-    </Reference>
-    <Reference Include="Waterfront.Core">
-      <HintPath>..\..\..\Waterfront\src\Waterfront.Core\bin\Debug\net6.0\Waterfront.Core.dll</HintPath>
-    </Reference>
-  </ItemGroup>
-
+    <ItemGroup>
+        <PackageReference Include="Microsoft.Extensions.Logging" Version="6.0.0" />
+        <PackageReference Include="Microsoft.Extensions.Options" Version="6.0.0" />
+        <PackageReference Include="BCrypt.Net-Next" Version="4.0.3" />
+        <PackageReference Include="DotNet.Glob" Version="3.1.3" />
+        <PackageReference Include="Waterfront.Common" Version="1.0.0-alpha.72" />
+        <PackageReference Include="Waterfront.Core" Version="1.0.0-alpha.72" />
+    </ItemGroup>
 
 </Project>
