--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -7,5 +7,5 @@ jobs:
         with:
           fetch-depth: 0
       - uses: actions/setup-dotnet@v3
-      - run: ./build --target build --configuration Release
-      - run: ./build --target pack --configuration Release --no-build
+      - run: ./build.sh --target build --configuration Release
+      - run: ./build.sh --target pack --configuration Release --no-build
