--- a/src/Waterfront.Acl.Static.Extensions.DependencyInjection/Waterfront.Acl.Static.Extensions.DependencyInjection.csproj
+++ b/src/Waterfront.Acl.Static.Extensions.DependencyInjection/Waterfront.Acl.Static.Extensions.DependencyInjection.csproj
@@ -1,19 +1,21 @@
 <Project Sdk="Microsoft.NET.Sdk">
 
-    <PropertyGroup>
-        <TargetFramework>net6.0</TargetFramework>
-        <ImplicitUsings>enable</ImplicitUsings>
-        <Nullable>enable</Nullable>
-    </PropertyGroup>
+  <PropertyGroup>
+    <TargetFramework>net6.0</TargetFramework>
+    <ImplicitUsings>enable</ImplicitUsings>
+    <Nullable>enable</Nullable>
+    <Version>$(SEMVER)</Version>
+    <InformationalVersion>$(INFO_VER)</InformationalVersion>
+  </PropertyGroup>
 
-    <ItemGroup>
-        <ProjectReference Include="..\Waterfront.Acl.Static\Waterfront.Acl.Static.csproj"/>
-    </ItemGroup>
+  <ItemGroup>
+    <ProjectReference Include="..\Waterfront.Acl.Static\Waterfront.Acl.Static.csproj" />
+  </ItemGroup>
 
-    <ItemGroup>
-        <PackageReference Include="Microsoft.Extensions.DependencyInjection" Version="6.0.1"/>
-        <PackageReference Include="Microsoft.Extensions.Configuration" Version="6.0.1"/>
-        <PackageReference Include="Waterfront.Extensions.DependencyInjection" Version="1.0.0-alpha.13"/>
-    </ItemGroup>
+  <ItemGroup>
+    <PackageReference Include="Microsoft.Extensions.DependencyInjection" Version="6.0.1" />
+    <PackageReference Include="Microsoft.Extensions.Configuration" Version="6.0.1" />
+    <PackageReference Include="Waterfront.Extensions.DependencyInjection" Version="1.0.0-alpha.13" />
+  </ItemGroup>
 
 </Project>
