--- a/src/Waterfront.Acl.Static/Waterfront.Acl.Static.csproj
+++ b/src/Waterfront.Acl.Static/Waterfront.Acl.Static.csproj
@@ -1,18 +1,20 @@
 <Project Sdk="Microsoft.NET.Sdk">
 
-    <PropertyGroup>
-        <TargetFramework>net6.0</TargetFramework>
-        <ImplicitUsings>enable</ImplicitUsings>
-        <Nullable>enable</Nullable>
-    </PropertyGroup>
+  <PropertyGroup>
+    <TargetFramework>net6.0</TargetFramework>
+    <ImplicitUsings>enable</ImplicitUsings>
+    <Nullable>enable</Nullable>
+    <Version>$(SEMVER)</Version>
+    <InformationalVersion>$(INFO_VER)</InformationalVersion>
+  </PropertyGroup>
 
-    <ItemGroup>
-        <PackageReference Include="Microsoft.Extensions.Logging" Version="6.0.0" />
-        <PackageReference Include="Microsoft.Extensions.Options" Version="6.0.0" />
-        <PackageReference Include="BCrypt.Net-Next" Version="4.0.3" />
-        <PackageReference Include="DotNet.Glob" Version="3.1.3" />
-        <PackageReference Include="Waterfront.Common" Version="1.0.0-alpha.72" />
-        <PackageReference Include="Waterfront.Core" Version="1.0.0-alpha.72" />
-    </ItemGroup>
+  <ItemGroup>
+    <PackageReference Include="Microsoft.Extensions.Logging" Version="6.0.0" />
+    <PackageReference Include="Microsoft.Extensions.Options" Version="6.0.0" />
+    <PackageReference Include="BCrypt.Net-Next" Version="4.0.3" />
+    <PackageReference Include="DotNet.Glob" Version="3.1.3" />
+    <PackageReference Include="Waterfront.Common" Version="1.0.0-alpha.72" />
+    <PackageReference Include="Waterfront.Core" Version="1.0.0-alpha.72" />
+  </ItemGroup>
 
 </Project>
