--- a/src/Waterfront.Acl.Static.Extensions.DependencyInjection/Waterfront.Acl.Static.Extensions.DependencyInjection.csproj
+++ b/src/Waterfront.Acl.Static.Extensions.DependencyInjection/Waterfront.Acl.Static.Extensions.DependencyInjection.csproj
@@ -13,9 +13,9 @@
   </ItemGroup>
 
   <ItemGroup>
-    <PackageReference Include="Microsoft.Extensions.DependencyInjection" Version="6.0.1" />
-    <PackageReference Include="Microsoft.Extensions.Configuration" Version="6.0.1" />
-    <PackageReference Include="Waterfront.Extensions.DependencyInjection" Version="1.0.0-alpha.14" />
+    <PackageReference Include="Microsoft.Extensions.DependencyInjection.Abstractions" Version="6.0.0" />
+    <PackageReference Include="Microsoft.Extensions.Configuration.Abstractions" Version="6.0.0" />
+    <PackageReference Include="Waterfront.Extensions.DependencyInjection" Version="1.0.0-alpha.15" />
   </ItemGroup>
 
 </Project>
