--- a/src/Waterfront.Acl.Static/Waterfront.Acl.Static.csproj
+++ b/src/Waterfront.Acl.Static/Waterfront.Acl.Static.csproj
@@ -9,12 +9,11 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <PackageReference Include="Microsoft.Extensions.Logging" Version="6.0.0" />
+    <PackageReference Include="Microsoft.Extensions.Logging.Abstractions" Version="6.0.0" />
     <PackageReference Include="Microsoft.Extensions.Options" Version="6.0.0" />
     <PackageReference Include="BCrypt.Net-Next" Version="4.0.3" />
     <PackageReference Include="DotNet.Glob" Version="3.1.3" />
-    <PackageReference Include="Waterfront.Common" Version="1.0.0-alpha.75" />
-    <PackageReference Include="Waterfront.Core" Version="1.0.0-alpha.75" />
+    <PackageReference Include="Waterfront.Core" Version="1.0.0-alpha.76" />
   </ItemGroup>
 
 </Project>
