--- a/src/Waterfront.Acl.Static.Extensions.DependencyInjection/Waterfront.Acl.Static.Extensions.DependencyInjection.csproj
+++ b/src/Waterfront.Acl.Static.Extensions.DependencyInjection/Waterfront.Acl.Static.Extensions.DependencyInjection.csproj
@@ -4,8 +4,6 @@
     <TargetFramework>net6.0</TargetFramework>
     <ImplicitUsings>enable</ImplicitUsings>
     <Nullable>enable</Nullable>
-    <Version>$(SEMVER)</Version>
-    <InformationalVersion>$(INFO_VER)</InformationalVersion>
   </PropertyGroup>
 
   <ItemGroup>
@@ -13,9 +11,10 @@
   </ItemGroup>
 
   <ItemGroup>
-    <PackageReference Include="Microsoft.Extensions.DependencyInjection.Abstractions" Version="6.0.0" />
+    <PackageReference Include="Microsoft.Extensions.DependencyInjection.Abstractions"
+      Version="6.0.0" />
     <PackageReference Include="Microsoft.Extensions.Configuration.Abstractions" Version="6.0.0" />
-    <PackageReference Include="Waterfront.Extensions.DependencyInjection" Version="1.0.0-alpha.15" />
+    <PackageReference Include="Waterfront.Extensions.DependencyInjection" Version="1.0.0-alpha.16" />
   </ItemGroup>
 
 </Project>
